--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,8 +18,8 @@
     --border: 214.3 31.8% 91.4%;
     --input: 214.3 31.8% 91.4%;
  
-    --primary: 222.2 47.4% 11.2%;
-    --primary-foreground: 210 40% 98%;
+    --primary:197, 71%, 52%, 1;
+    --primary-foreground: 208deg 60.71% 42.48%;
  
     --secondary: 210 40% 96.1%;
     --secondary-foreground: 222.2 47.4% 11.2%;
