change notes list design

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -90,6 +90,26 @@
 
 
 }
+/* width */
+::-webkit-scrollbar {
+    width: 8px;
+}
+  
+/* Track */
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+  
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #565a5e;
+    border-radius: 5px;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #e4b5b5;
+}
 /* ol , ul , menu{
   list-style: auto;
 } */
